--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 </head>
 <body>
   <header>
-    <img src="./logo-medianeira.png" alt="Logo da Prefeitura de Medianeira">
+    <img src="./logo-medianeira.png" alt="logo-medianeira.png">
     <h1>Programa de Compliance Público da Prefeitura de Medianeira</h1>
   </header>
   <main>
